version/0.12/_sources/api/solver/_autosummary/settings/accuracy_control.rst.txt
:orphan:

.. _accuracy_control:

accuracy_control
================

.. currentmodule:: ansys.fluent.core.solver.settings_231.accuracy_control

.. autoclass:: accuracy_control
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

============================================================   ===============================================================================

Child                                                                                                                                  Summary

============================================================   ===============================================================================
:ref:`option <option_3>`                                                                         Enable/disable error control during tracking.

:ref:`max_number_of_refinements <max_number_of_refinements>`       Set the maximum number of step size refinements if error control is active.

:ref:`tolerance <tolerance>`                                       Set the maximum number of step size refinements if error control is active.

============================================================   ===============================================================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`tracking <tracking>`       'tracking' child.

==========================   =====================

