version/0.18/_sources/api/solver/_autosummary/settings/accuracy_control.rst.txt
:orphan:

.. _accuracy_control:

accuracy_control
================

.. autoclass:: ansys.fluent.core.solver.settings_232.accuracy_control.accuracy_control
    :show-inheritance:

.. rubric:: Attributes

============================================================   ===============================================================================

Attribute                                                                                                                              Summary

============================================================   ===============================================================================
:ref:`option <option_4>`                                                                         Enable/disable error control during tracking.

:ref:`tolerance <tolerance>`                                       Set the maximum number of step size refinements if error control is active.

:ref:`max_number_of_refinements <max_number_of_refinements>`       Set the maximum number of step size refinements if error control is active.

:ref:`number_of_cells_to_cross <number_of_cells_to_cross>`                          Set the maximum number of cells to be crossed in one step.

============================================================   ===============================================================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`tracking <tracking>`       'tracking' child.

==========================   =====================

